# lament

./: .editorconfig  .envrc  .git-com.jsonnet  .git-com.yml  .gitattributes  .gitignore  .luacheckrc  .luarc.json  .tool-versions  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  ROADMAP.md  compulsory-halt.just  flake.nix  git-com.nu  lament-dev-1.rockspec  lament-dev-2.rockspec  lefty-escal.sh  readme.md
.github/: FUNDING.yml
docs/: CODE_OF_CONDUCT.tex  CONTRIBUTING.tex  README.dvi  README.out  README.tex  README.toc
docs/chapters/: CONFIGOM.tex  INTRODUCTION.tex
lament/: cli.lua  conf.lua
lament/lament/: conf.lua  hive.lua  key.lua  lament.lua
spec/: bugcheck_spec.lua  check_busted_spec.lua  key_resolver_spec.lua
src/: cli.lua  const.lua  globals.lua  lament.lua  sandbox.lua
src/cli/: cli.lua  lament  resolve.lua
src/cli/cmd/: apply.lua  cross_calibrate.lua  get.lua  recalibrate.lua  set.lua
src/crates/lament_sandbox/: Cargo.toml
src/crates/lament_sandbox/src/: config.rs  env.rs  error.rs  lib.rs  sandbox.rs  types.rs
src/engine/: apply.lua  backend.lua  cross_calibrate.lua  engine.lua  recalibrate.lua
src/exec/: perms.lua  proxy.lua  sandbox.lua
src/hive/: hive.lua  key.lua  key_resolver.lua
src/interface/: backend.lua  registry.lua
src/lament/: backend.lua  conf.lua  executor.lua  hive.lua  hooks.lua  key.lua  lament.lua  loader.lua  sandbox.lua
src/lament/util/: enum.lua  (+2 more)
src/log/: log.lua
src/util/: enum.lua  switch.lua  util.lua
test/: Containerfile  install-lexpect.sh
test/env/: Containerfile
utils/: lefty-escal.sh
(+2 files in other folders)
